cambio en el titulo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página Principal</h1>
+    <h1>Página Principal (cambio)</h1>
     <hr>
     <a href="acercade.html">Acerca de nosotros</a>
     <a href="contacto.html">Contactanos</a>
