--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página Principal (cambio)</h1>
+    <h1>Página Principal (cambio2)</h1>
     <hr>
     <a href="acercade.html">Acerca de nosotros</a>
     <a href="contacto.html">Contactanos</a>
